Bug 158937 - Crash when pressing cancel in the insert password dialog when recovering a file (swlo!SwDocShell::SetModified+4b)
Summary: Crash when pressing cancel in the insert password dialog when recovering a fi...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium critical
Assignee: Matt K
URL:
Whiteboard: target:24.8.0
Keywords: wantBacktrace
Depends on:
Blocks: Password-Protected Document-Recovery
  Show dependency treegraph
 
Reported: 2023-12-30 19:34 UTC by Telesto
Modified: 2024-01-11 04:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample (12.58 KB, application/vnd.oasis.opendocument.text)
2023-12-30 19:35 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2023-12-30 19:34:59 UTC
Description:
Crash when pressing cancel in the insert password dialog when recovering a file (swlo!SwDocShell::SetModified+4b)

Steps to Reproduce:
1. Open the attached file (password: ABC)(or create a passworded file yourself)
2. Tools -> Options -> Load/Save -> General -> Set autosave to 1 minute (and press OK)
3. Make some change.. and wait 60 seconds
4. Force quite LibreOffice from the task manager
5. Click recover selected
5. In Enter password dialog -> press Cancel -> Crash


Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: a9ad36ae46ff76c0d59b0d170314fdd3a9ee5d35
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2023-12-30 19:35:21 UTC
Created attachment 191660 [details]
Sample
Comment 2 Stéphane Guillou (stragu) 2024-01-09 13:42:06 UTC
Reproduced in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e83c7ec2f4d801365235bf56d7cc8cf31ef4a00e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 3 Julien Nabet 2024-01-09 17:51:50 UTC
I used kill -9 but it doesn't launch recovery afterwards so can't reproduce this.
Comment 4 Matt K 2024-01-09 23:46:13 UTC
Fix is posted at: https://gerrit.libreoffice.org/c/core/+/161844
Comment 5 Commit Notification 2024-01-11 04:20:00 UTC
Matt K committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e004c9dd2cc0da7f27503d14bfc13975889eea77

tdf#158937 Allow cancel of password dialog during recovery

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.